src/styles/global.css
/* ----------------- */
/* Custom Selectors  */
/* ----------------- */

@custom-media --mobile-nav (width < 768px);
@custom-media --desktop-nav (width >= 768px);
@custom-media --screen-sm (width >= 640px);
@custom-media --screen-md (width >= 768px);
@custom-media --screen-lg (width >= 1024px);
@custom-media --screen-xl (width >= 1280px);
@custom-media --screen-2xl (width >= 1440px);

@custom-selector :--heading h1, h2, h3, h4, h5, h6;
@custom-selector :--text p, span, blockquote;
@custom-selector :--media img, picture, video, canvas, svg;
@custom-selector :--interactive input, button, textarea, select, a;
@custom-selector :--list ul, ol;

/* ----------------- */
/* Custom Properties */
/* ----------------- */

:root {
  /* colors */
  --clr-neutral-100: 0 0% 100%;
  --clr-neutral-200: 0 0% 98%;
  --clr-neutral-300: 223 18% 96%;
  --clr-neutral-400: 231 8% 61%;

  --clr-primary: 231 26% 24%;
  --clr-secondary: 158 61% 49%;

  /* font-families */
  --ff-sans: 'Public Sans', sans-serif;

  /* font-weight */
  --fw-light: 300;
  --fw-normal: 400;
  --fw-bold: 700;

  /* letter-spacing */
  --ls-sm: -0.0178em;
  --ls-base: -0.015625em;

  /* line-height */
  --lh-sm: 1.2;
  --lh-base: 1.5;

  /* font-size */
  --fs-3xs: 0.625rem;
  --fs-2xs: 0.8125rem;
  --fs-xs: 0.875rem;
  --fs-sm: 0.9375rem;
  --fs-base: 1rem;
  --fs-md: 1.125rem;
  --fs-lg: 1.25rem;
  --fs-xl: 1.5rem;
  --fs-2xl: 2rem;
  --fs-3xl: 2.5rem;
  --fs-4xl: 3.5rem;

  --fs-heading-1: var(--fs-3xl);
  --fs-heading-2: var(--fs-2xl);
  --fs-heading-3: var(--fs-lg);

  /* border */
  --outline-focus-light: 4px dotted hsl(var(--clr-neutral-100));
  --outline-focus-primary: 4px dotted hsl(var(--clr-primary));
  --outline-focus-secondary: 4px dotted hsl(var(--clr-secondary));

  /* border radius */
  --br-base: 0.3125rem;
  --br-lg: 1.375rem;
  --br-full: 50%;

  /* spacing */
  --space-sm: 0.5rem; /* 8px */
  --space-base: 1rem; /* 16px */
  --space-md: 1.5rem; /* 24px */
  --space-lg: 2rem; /* 32px */
  --space-xl: 2.5rem; /* 40px */
  --space-2xl: 4rem; /* 64px */
  --space-3xl: 5.625rem; /* 90px */
  --space-4xl: 6rem; /* 96px */

  --gutters-inline: 1.5rem;

  /* gradients */
  --gradient-default: linear-gradient(135deg, #33d35e 0%, #2ab6d9 99.58%);
  --gradient-primary: linear-gradient(180deg, #2d314d 0%, rgba(45, 49, 77, 0.0001) 100%);
}

@media (--screen-md) {
  :root {
    --fs-heading-1: var(--fs-4xl);
    --fs-heading-2: var(--fs-3xl);
    --fs-heading-3: var(--fs-xl);
  }
}
@media (--screen-lg) {
  :root {
    --gutters-inline: 3rem;
  }
}

/* ----------------- */
/* General Reset     */
/* ----------------- */

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html {
  -webkit-font-smoothing: antialiased;
  min-height: 100%;
}

html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
}

body {
  flex-grow: 1;
  isolation: isolate;
}

:--media {
  display: block;
  max-width: 100%;
}

:--interactive {
  font: inherit;
  color: inherit;
  background-color: transparent;
  border: none;
  padding: 0;
}

:--list {
  list-style: none;
  padding: 0;
}

:--text,
:--heading {
  font: inherit;
  overflow-wrap: break-word;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* ----------------- */
/* Utility classes   */
/* ----------------- */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

.container {
  width: min(100%, 70rem);
  margin-inline: auto;
}

.btn-gradient {
  cursor: pointer;
  padding-inline: var(--space-lg);
  height: 44px;
  border-radius: var(--br-lg);
  color: hsl(var(--clr-neutral-100));
  font-size: var(--fs-xs);
  font-weight: var(--fw-bold);
  background: var(--gradient-default);
  transition: opacity 250ms ease-in-out;
}

.btn-gradient:hover,
.btn-gradient:focus-visible {
  opacity: 0.4;
}

/* ----------------- */
/* General styles    */
/* ----------------- */

body {
  font-family: var(--ff-sans);
  line-height: var(--lh-base);
  letter-spacing: var(--ls-base);
  font-weight: var(--fw-normal);
  color: hsl(var(--clr-neutral-400));
  background-color: hsl(var(--clr-neutral-200));
}

:--heading {
  color: hsl(var(--clr-primary));
  font-weight: var(--fw-light);
  line-height: var(--lh-sm);
}

*:focus-visible {
  outline: var(--outline-focus-primary);
}

